[gd_scene load_steps=5 format=3 uid="uid://b2om6os6haj1"]

[ext_resource type="PackedScene" uid="uid://ckak4h5n30ila" path="res://Game/TestLevel/testLevelScene.tscn" id="1_3swin"]
[ext_resource type="Script" path="res://Game/Main/mainScript.gd" id="1_cu2if"]
[ext_resource type="PackedScene" uid="uid://p0uq6callbul" path="res://Game/Legs player/legsPlayerScene.tscn" id="2_08djd"]
[ext_resource type="PackedScene" uid="uid://biegw40cam53k" path="res://Game/Arms player/armsPlayerScene.tscn" id="4_hms30"]

[node name="MainScene" type="Node"]
script = ExtResource("1_cu2if")

[node name="TestLevel" parent="." instance=ExtResource("1_3swin")]
position = Vector2(303, 66)

[node name="LegsPlayer" parent="." instance=ExtResource("2_08djd")]
position = Vector2(-131, 72)

[node name="ArmsPlayer" parent="." instance=ExtResource("4_hms30")]
position = Vector2(-117, -64)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(580, 371)
zoom = Vector2(1.795, 1.795)

[node name="ProximityLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.158
anchor_right = 0.431
anchor_bottom = 0.181
offset_left = 116.88
offset_top = 378.36
offset_right = 115.48
offset_bottom = 376.52
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Proximité des 2 joueurs détectée, assemblage possible"
horizontal_alignment = 1
vertical_alignment = 1
